Remove some of our error message snark